# Spike

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TODO-Toby.org
Doc/: .#TODO-Toby.org  TODO-Toby.org
Examples/: AHVxHD_simple_smoothAHV.cpp  Agent_GRID-1D.cpp  Agent_PI.cpp  Agent_PLACE.cpp  CMakeLists.txt  FV-HD_prox1.cpp  HD_dist1.cpp  HD_distal-only.cpp  HD_distal-only_path-integration.cpp  HD_distal-only_smoothAHV.cpp  HD_distal-plus-proximal.cpp  HD_proximal-only.cpp  Jordan1.cpp  PLACE_Qpolicy_proximal.cpp  PLACE_detour.cpp  PLACE_distal-only.cpp  PLACE_linear.cpp  PLACE_proximal-only2.cpp  PLACE_proximal-only3.cpp  PLACE_proximal-only4.cpp  PLACE_square.cpp  PageHD1.cpp  PageHD2.cpp  PageHD2_VIS.cpp  SimpleRateModel.cpp
Examples/old/: Agent_PI.cpp  Agent_PLACE.cpp  PageHD1.cpp  PageHD2.cpp
Examples/toml/: FV-HD_prox1.toml  HD_dist1.toml  PLACE_proximal-only2.toml  PLACE_proximal-only2.toml.backup  PLACE_proximal-only2.toml.backup2  PLACE_proximal-only3.toml  PLACE_proximal-only3.toml.backup  PLACE_proximal-only4.toml
Experiments/: ConductanceExperiment1.cpp
Python/: AHVxHD_simple_smoothAHV.ipynb  HD-VIS-analysis.ipynb  PLACE_proximal-only2.HORD.ipynb  PLACE_proximal-only2.hyperopt.ipynb  PLACE_proximal-only3.HORD.ipynb  PLACE_proximal-only4.HORD.ipynb  PageHD1.py
Python/.ipynb_checkpoints/: HD_distal-only_path-integration-checkpoint.ipynb
Simulator/: Simulator.cu
Spike/: CMakeLists.txt
Spike/Backend/: CMakeLists.txt  Context.cpp  Context.hpp  Device.hpp  Macros.hpp
Spike/Backend/CUDA/: CMakeLists.txt
Spike/Backend/CUDA/Models/: RateModel.hpp
Spike/Backend/Dummy/: CMakeLists.txt
Spike/Backend/Dummy/Models/: CMakeLists.txt  RateModel.cpp  RateModel.hpp
Spike/Backend/Eigen/: ViennaBackend.hpp
Spike/Backend/Eigen/Models/: CMakeLists.txt  RateAgent.cpp  RateAgent.hpp  RateModel.cpp  RateModel.hpp
Spike/Backend/SYCL/: CMakeLists.txt
Spike/Backend/SYCL/Models/: CMakeLists.txt  EventModel.cpp  EventModel.hpp
Spike/Backend/Vienna/: CMakeLists.txt  Memory.hpp
Spike/Backend/Vienna/Helpers/: RandomStateManager.hpp
Spike/Backend/Vienna/Models/: CMakeLists.txt  RateModel.cpp  RateModel.hpp
Spike/Backend/Vienna/Neurons/: AdExSpikingNeurons.hpp  GeneratorInputSpikingNeurons.hpp  ImagePoissonInputSpikingNeurons.hpp  InputSpikingNeurons.hpp  IzhikevichSpikingNeurons.hpp  LIFSpikingNeurons.hpp  Neurons.hpp  PoissonInputSpikingNeurons.hpp  SpikingNeurons.hpp
Spike/Backend/Vienna/RecordingElectrodes/: CollectNeuronSpikesRecordingElectrodes.hpp  CountNeuronSpikesRecordingElectrodes.hpp  NetworkStateArchiveRecordingElectrodes.hpp  RecordingElectrodes.hpp
Spike/Backend/Vienna/STDP/: EvansSTDP.hpp  HigginsSTDP.hpp  MasquelierSTDP.hpp  STDP.hpp
Spike/Backend/Vienna/SpikeAnalyser/: SpikeAnalyser.hpp
Spike/Backend/Vienna/Synapses/: ConductanceSpikingSynapses.hpp  CurrentSpikingSynapses.hpp  SpikingSynapses.hpp  Synapses.hpp
Spike/Helpers/: RandomStateManager.hpp
Spike/Models/: CMakeLists.txt  EventModel.cpp  EventModel.hpp  RateAgent.cpp  RateAgent.hpp  RateBase.cpp  RateBase.hpp  RateModel.cpp  RateModel.hpp
Spike/Neurons/: AdExSpikingNeurons.hpp  GeneratorInputSpikingNeurons.hpp  ImagePoissonInputSpikingNeurons.hpp  InputSpikingNeurons.hpp  IzhikevichSpikingNeurons.hpp  LIFSpikingNeurons.hpp  Neurons.hpp  PoissonInputSpikingNeurons.hpp  SpikingNeurons.hpp
Spike/RecordingElectrodes/: CollectNeuronSpikesRecordingElectrodes.hpp  CountNeuronSpikesRecordingElectrodes.hpp  NetworkStateArchiveRecordingElectrodes.hpp  RecordingElectrodes.hpp
Spike/STDP/: EvansSTDP.hpp  HigginsSTDP.hpp  MasquelierSTDP.hpp  STDP.hpp
Spike/SpikeAnalyser/: SpikeAnalyser.hpp
Spike/Synapses/: ConductanceSpikingSynapses.hpp  CurrentSpikingSynapses.hpp  SpikingSynapses.hpp  Synapses.hpp
SpikeAnalyser/: GraphPlotter.cu  SpikeAnalyser.cu
Synapses/: IzhikevichSpikingSynapses.cu  IzhikevichSpikingSynapses.h  SpikingSynapses.cu  SpikingSynapses.h
cmake/: FindComputeCpp.cmake  FindMKL.cmake
